Debugger: Do not restrict precision in double arrays

Task-number: QTCREATORBUG-13050
Change-Id: I54855af0edbbc66c53c8a42da1a216c37a27f25a
Reviewed-by: hjk <hjk121@nokiamail.com>